승인대기중 유저리스트 가져오기 라우터 구현, 스웨거
